--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "brand",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "sideEffects": false,
   "main": "lib/index.cjs.js",
   "module": "lib/index.es.js",
   "mainServer": "server/index.js",
-  "types": "lib/src/index.d.ts",
+  "types": "lib/index.d.ts",
   "scripts": {
     "build": "rimraf lib && rollup -c rollup.config.js",
     "dev": "rimraf lib && rollup -c rollup.config.js -w",
